force-app/main/default/objects/ClinicalNote__c/ClinicalNote__c.object-meta.xml
<CustomObject>
    <label>Clinical Note</label>
    <nameField>
        <label>Clinical Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>