force-app/main/default/objects/ClinicalNote__c/fields/Addendum_To__c.field-meta.xml
<CustomField>
    <fullName>Addendum_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Addendum To</label>
    <referenceTo>ClinicalNote__c</referenceTo>
    <relationshipLabel>Addenda</relationshipLabel>
    <relationshipName>Addenda</relationshipName>
    <type>Lookup</type>
</CustomField>