force-app/main/default/objects/ClinicalNote__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>Practitioner__c</referenceTo>
    <relationshipLabel>Authored Clinical Notes</relationshipLabel>
    <relationshipName>AuthoredClinicalNotes</relationshipName>
    <type>Lookup</type>
</CustomField>