force-app/main/default/objects/ClinicalNote__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Progress Note</fullName>
                <default>true</default>
                <label>Progress Note</label>
            </value>
            <value>
                <fullName>H&amp;P</fullName>
            </value>
            <value>
                <fullName>Discharge Summary</fullName>
            </value>
            <value>
                <fullName>Consult</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>