force-app/main/default/objects/ClinicalNote__c/listViews/All_Notes.listView-meta.xml
<ListView>
    <fullName>All_Notes</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Encounter__c</columns>
    <columns>Note_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Author__c</columns>
    <columns>Signed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Notes</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>