force-app/main/default/objects/ClinicalNote__c/listViews/Draft_Notes.listView-meta.xml
<ListView>
    <fullName>Draft_Notes</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Encounter__c</columns>
    <columns>Note_Type__c</columns>
    <columns>Author__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Notes</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>